--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,12 +4,37 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+p {
+  color: gray;
+  font-size: 21px;
+}
+
+footer {
+  text-align: right;
+  color: gray;
+}
+
+/*HEADINGS*/
 h1 {
   font-size: 50px;
+  font-weight: normal;
   color: white;
 }
 
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+
+/*LINKS*/
 .link--download {
   color: aquamarine;
   font-size: 16px;
+}
+
+/*MEDIA*/
+.img--main {
+  max-width: 80%;
+  margin: 20px auto;
 }
